Add only nginx controller pods to service mesh

--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
   values:
     fullnameOverride: ingress-nginx-internal
     controller:
+      podAnnotations:
+        linkerd.io/inject: enabled
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.1.202"
