--- a/kubernetes/apps/linkerd/viz-ingress.yaml
+++ b/kubernetes/apps/linkerd/viz-ingress.yaml
@@ -10,6 +10,8 @@ metadata:
       proxy_set_header Origin "";
       proxy_hide_header l5d-remote-ip;
       proxy_hide_header l5d-server-id;
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
 spec:
   ingressClassName: internal
   rules:
