--- a/kubernetes/apps/linkerd/viz-ingress.yaml
+++ b/kubernetes/apps/linkerd/viz-ingress.yaml
@@ -12,7 +12,7 @@ metadata:
       proxy_hide_header l5d-server-id;
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.org/websocket-services: "tap.linkerd-viz.svc.cluster.local:8089"
+    nginx.org/websocket-services: "web.linkerd-viz.svc.cluster.local:8084"
 spec:
   ingressClassName: internal
   rules:
