--- a/kubernetes/apps/linkerd/viz.yaml
+++ b/kubernetes/apps/linkerd/viz.yaml
@@ -24,3 +24,4 @@ spec:
       enabled: true
     prometheus:
       enabled: true
+    jaegerUrl: "http://linkerd-jaeger.linkerd-jaeger.svc.cluster.local:16686"
