Add overseerr pod annotations for tracing

--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -22,6 +22,8 @@ spec:
     remediation:
       retries: 50
   values:
+    podAnnotations:
+      instrumentation.opentelemetry.io/inject-nodejs: "openobserve-collector/openobserve-nodejs"
     resources:
       limits:
         cpu: 500m
