--- a/kubernetes/apps/observability/uptrace/uptrace.yaml
+++ b/kubernetes/apps/observability/uptrace/uptrace.yaml
@@ -156,7 +156,7 @@ spec:
           token: project2_secret_token
         secret_key: 102c1a557c314fc28198acd017960843
         site:
-          addr: http://localhost:14318/
+          addr: https://uptrace.internal.stiforr.com/
         smtp_mailer:
           enabled: false
           from: uptrace@localhost
