--- a/kubernetes/apps/observability/uptrace/uptrace.yaml
+++ b/kubernetes/apps/observability/uptrace/uptrace.yaml
@@ -61,7 +61,7 @@ spec:
       enabled: true
       nodeSelector: {}
       otlpExporter:
-        endpoint: http://my-uptrace:14317
+        endpoint: http://localhost:14317
         headers:
           uptrace-dsn: http://project1_secret_token@localhost:14318?grpc=14317
         tls:
