--- a/kubernetes/apps/observability/uptrace/uptrace.yaml
+++ b/kubernetes/apps/observability/uptrace/uptrace.yaml
@@ -168,9 +168,7 @@ spec:
         uptrace_go: null
       env:
       - name: K8S_NODE_NAME
-        valueFrom:
-          fieldRef:
-            fieldPath: spec.nodeName
+        value: controller
       envFrom: []
       image:
         pullPolicy: IfNotPresent
