--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -24,6 +24,7 @@ spec:
   values:
     podAnnotations:
       instrumentation.opentelemetry.io/inject-nodejs: "observability/nodejs-instrumentation"
+      sidecar.opentelemetry.io/inject: 'true'
     resources:
       limits:
         cpu: 500m
