--- a/kubernetes/apps/observability/uptrace/nodejs-otel-collector.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-otel-collector.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nodejs-collector
   namespace: observability
 spec:
-  mode: sidecar
+  mode: deployment
   config: |
     service:
       pipelines:
