--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -26,10 +26,10 @@ spec:
       instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
     resources:
       limits:
-        cpu: 500m
+        cpu: 1Gi
         memory: 1Gi
       requests:
-        cpu: 250m
+        cpu: 500m
         memory: 512Mi
     image:
       repository: sctx/overseerr
