--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -26,7 +26,7 @@ spec:
       instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
     resources:
       limits:
-        cpu: 1Gi
+        cpu: 1
         memory: 1Gi
       requests:
         cpu: 500m
