--- a/kubernetes/apps/observability/uptrace/nodejs-otel-collector.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-otel-collector.yaml
@@ -34,5 +34,8 @@ spec:
           http:
           grpc:
       opencensus:
+      jaeger:
+        protocols:
+          grpc:
     extensions:
       health_check:
