--- a/kubernetes/apps/linkerd/kustomization.yaml
+++ b/kubernetes/apps/linkerd/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./linkerd-ca-trust-bundle.yaml
   - ./linkerd-identity-issuer-cert.yaml
   - ./linkerd-issuer.yaml
-  - ./viz.yaml
+#  - ./viz.yaml
   - ./smi.yaml
-  - ./viz-ingress.yaml
+#  - ./viz-ingress.yaml
   - ./jaeger.yaml
