--- a/kubernetes/apps/observability/jaeger/jaeger-operator.yaml
+++ b/kubernetes/apps/observability/jaeger/jaeger-operator.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: jaeger-operator
-  namespace: obervability
+  namespace: observability
 spec:
   chart:
     spec:
