--- a/kubernetes/apps/observability/jaeger/jaeger-cr.yaml
+++ b/kubernetes/apps/observability/jaeger/jaeger-cr.yaml
@@ -2,5 +2,5 @@ apiVersion: jaegertracing.io/v1
 kind: Jaeger
 metadata:
   name: jaeger
-  namespace: obervability
+  namespace: observability
 spec: {}
