--- a/kubernetes/apps/observability/uptrace/nodejs-otel-collector.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-otel-collector.yaml
@@ -9,7 +9,7 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [otlp,opencensus]
+          receivers: [otlp,opencensus,jaeger]
           processors: [batch]
           exporters: [otlp/uptrace]
         metrics:
