--- a/kubernetes/apps/linkerd/linkerd-jaeger.yaml
+++ b/kubernetes/apps/linkerd/linkerd-jaeger.yaml
@@ -25,88 +25,34 @@ spec:
       command: /otelcol-contrib
       config:
         exporters:
-          otlp:
-            endpoint: jaeger.${POD_NAMESPACE}:14250
+          jaeger:
+            endpoint: http://jaeger-collector.observability.svc.cluster.local:14250
             tls:
               insecure: true
         extensions:
           health_check: null
         processors:
           batch: null
-          k8sattributes:
-            auth_type: serviceAccount
-            extract:
-              labels:
-              - from: pod
-                key: app.kubernetes.io/name
-                tag_name: kube_app_name
-              - from: pod
-                key: app.kubernetes.io/instance
-                tag_name: kube_app_instance
-              - from: pod
-                key: app.kubernetes.io/version
-                tag_name: kube_app_version
-              - from: pod
-                key: app.kubernetes.io/component
-                tag_name: kube_app_component
-              - from: pod
-                key: app.kubernetes.io/part-of
-                tag_name: kube_app_part_of
-              - from: pod
-                key: app.kubernetes.io/managed-by
-                tag_name: kube_app_managed_by
-              metadata:
-              - k8s.pod.name
-              - k8s.pod.uid
-              - k8s.deployment.name
-              - k8s.node.name
-              - k8s.namespace.name
-              - k8s.pod.start_time
-              - k8s.replicaset.name
-              - k8s.replicaset.uid
-              - k8s.daemonset.name
-              - k8s.daemonset.uid
-              - k8s.job.name
-              - k8s.job.uid
-              - k8s.cronjob.name
-              - k8s.statefulset.name
-              - k8s.statefulset.uid
-              - container.image.name
-              - container.image.tag
-              - container.id
-              - k8s.container.name
-              - container.image.name
-              - container.image.tag
-              - container.id
-            pod_association:
-            - sources:
-              - from: resource_attribute
-                name: k8s.pod.name
-              - from: resource_attribute
-                name: k8s.namespace.name
-          resource:
-            attributes:
-            - action: insert
-              from_attribute: host.name
-              key: k8s.pod.name
-            - action: insert
-              from_attribute: linkerd.io/workload-ns
-              key: k8s.namespace.name
         receivers:
+          otlp:
+            protocols:
+              grpc:
+              http:
           opencensus:
+          zipkin:
+          jaeger:
+            protocols:
+              grpc:
+              thrift_http:
+              thrift_compact:
+              thrift_binary:
         service:
-          extensions:
-          - health_check
+          extensions: [health_check]
           pipelines:
             traces:
-              exporters:
-              - otlp
-              processors:
-              - resource
-              - k8sattributes
-              - batch
-              receivers:
-              - opencensus
+              receivers: [otlp,opencensus,zipkin,jaeger]
+              processors: [batch]
+              exporters: [jaeger]
       enabled: true
       env: []
       image:
@@ -139,7 +85,7 @@ spec:
       UID: null
       args:
       - --query.base-path=/jaeger
-      enabled: true
+      enabled: false
       image:
         name: jaegertracing/all-in-one
         pullPolicy: ""
