Update kube prometheus stack and loki

--- a/kubernetes/apps/flux-system/kustomization.yaml
+++ b/kubernetes/apps/flux-system/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./pod-monitor.yaml
 configMapGenerator:
   - name: flux-grafana-dashboards
+    namespace: monitoring
     files:
       - dashboards/cluster.json
       - dashboards/control-plane.json
