--- a/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -2,3 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helmrelease.yaml
+configMapGenerator:
+  - name: flux-kube-state-metrics-config
+    files:
+      - kube-state-metrics-config.yaml
+    options:
+      labels:
+        app.kubernetes.io/part-of: flux
+        app.kubernetes.io/component: monitoring
+configurations:
+  - kustomizeconfig.yaml
