Update kube prometheus stack and loki

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - helmrelease.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
+    namespace: monitoring
     files:
       - kube-state-metrics-config.yaml
     options:
