--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -28,6 +28,10 @@ spec:
           - "/metadata/annotations/prometheus-operator-validated"
         target:
           kind: PrometheusRule
+  valuesFrom:
+    - kind: ConfigMap
+      name: flux-kube-state-metrics-config
+      valuesKey: kube-state-metrics-config.yaml
   values:
     alertmanager:
       enabled: false
