Update kube prometheus stack and loki

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/kube-state-metrics-config.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/kube-state-metrics-config.yaml
@@ -14,7 +14,20 @@ kube-state-metrics:
           - helm.toolkit.fluxcd.io
           - notification.toolkit.fluxcd.io
           - image.toolkit.fluxcd.io
+          - extensions
+          - apps
+          - authentication.k8s.io
+          - autoscaling
         resources:
+          - horizontalpodautoscalers
+          - tokenreviews
+          - statefulsets
+          - daemonsets
+          - deployments
+          - replicasets
+          - daemonsets
+          - deployments
+          - replicasets
           - gitrepositories
           - buckets
           - helmrepositories
