--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
           - flow
           - port-distribution
           - icmp
-          - http
+          - httpV2
         serviceMonitor:
           enabled: true
         dashboards:
