--- a/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -22,29 +22,32 @@ spec:
   allowFirstLastIPs: "Yes"
   blocks:
     - cidr: "192.168.1.0/24"
-#---
-#apiVersion: cilium.io/v2
-#kind: CiliumNetworkPolicy
-#metadata:
-#  name: l7-visibility
-#spec:
-#  endpointSelector:
-#    matchLabels:
-#      "k8s:io.kubernetes.pod.namespace": default
-#  egress:
-#    - toPorts:
-#        - ports:
-#            - port: "53"
-#              protocol: ANY
-#          rules:
-#            dns:
-#              - matchPattern: "*"
-#    - toEndpoints:
-#        - matchLabels:
-#            "k8s:io.kubernetes.pod.namespace": default
-#      toPorts:
-#        - ports:
-#            - port: "80"
-#              protocol: TCP
-#            - port: "8080"
-#              protocol: TCP
+---
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: allow-all-with-l7-visibility
+spec:
+  endpointSelector: {}
+  egress:
+    - toEndpoints: []
+      toPorts:
+        - ports:
+            - port: "80"
+              protocol: TCP
+            - port: "443"
+              protocol: TCP
+          rules:
+            http:
+              - {}
+  ingress:
+    - fromEndpoints: []
+      toPorts:
+        - ports:
+            - port: "80"
+              protocol: TCP
+            - port: "443"
+              protocol: TCP
+          rules:
+            http:
+              - {}
