Enable cilium l7 visibility

--- a/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -41,7 +41,9 @@ spec:
             http:
               - {}
     - toEntities:
-      - all
+      - world
+      - cluster
+      - host
   ingress:
     - fromEndpoints: []
       toPorts:
@@ -54,4 +56,6 @@ spec:
             http:
               - {}
     - fromEntities:
-      - all
+      - world
+      - cluster
+      - host
