--- a/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -37,6 +37,8 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "53"
+              protocol: ANY
           rules:
             http:
               - {}
