Enable cilium l7 visibility

--- a/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -27,6 +27,7 @@ apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
   name: allow-all-with-l7-visibility
+  namespace: default
 spec:
   endpointSelector: {}
   egress:
