--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -19,6 +19,11 @@ spec:
   values:
     promtail:
       enabled: true
+      sidecar:
+        configReloader:
+          enabled: true
+          serviceMonitor:
+            enabled: false
     loki:
       enabled: true
       isDefault: false
