--- a/kubernetes/apps/istio/kustomization.yaml
+++ b/kubernetes/apps/istio/kustomization.yaml
@@ -2,11 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-#  - ./istio.base.yaml
-#  - ./istio-d.yaml
-#  - ./istio-ingress.yaml
-#  - ./kiali.yaml
-#  - ./jaeger.yaml
-#  - ./grafana.yaml
-#  - ./prometheus.yaml
-#  - ./ingress.yaml
+  - ./istio.base.yaml
+  - ./istio-d.yaml
+  - ./istio-ingress.yaml
+  - ./ingress.yaml
+  - ./kiali.yaml
+  - ./istio-cni.yaml
+  - ./istio-ztunnel.yaml
