--- a/kubernetes/apps/istio/istio-cni.yaml
+++ b/kubernetes/apps/istio/istio-cni.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: istio-cni
-  namespace: flux-system
+  namespace: istio-system
 spec:
   chart:
     spec:
@@ -15,9 +15,9 @@ spec:
         namespace: flux-system
   dependsOn:
   - name: istiod
-    namespace: flux-system
+    namespace: istio-system
   interval: 6h0m0s
   releaseName: istio-cni
-  targetNamespace: flux-system
+  targetNamespace: istio-system
   values:
     profile: ambient
