Add default namespace to istio mesh ambient mode

--- a/kubernetes/apps/default/namespace.yaml
+++ b/kubernetes/apps/default/namespace.yaml
@@ -3,4 +3,6 @@ kind: Namespace
 metadata:
   name: default
   annotations:
-    linkerd.io/inject: enabled
+    linkerd.io/inject: disabled
+  labels:
+    istio.io/dataplane-mode: ambient
