Add istio dashboards

--- a/kubernetes/apps/istio/kustomization.yaml
+++ b/kubernetes/apps/istio/kustomization.yaml
@@ -10,3 +10,17 @@ resources:
   - ./istio-cni.yaml
   - ./istio-ztunnel.yaml
   - ./kiali
+configMapGenerator:
+  - name: istio-grafana-dashboards
+    namespace: monitoring
+    options:
+      labels:
+        app.kubernetes.io/part-of: istio
+        grafana_dashboard: 1
+    files:
+      - ./dashboards/control_plane.json
+      - ./dashboards/mesh.json
+      - ./dashboards/performance.json
+      - ./dashboards/service.json
+      - ./dashboards/ztunnel.json
+      - ./dashboards/workload.json
