Update prometheus to include istio metrics

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -109,7 +109,7 @@ spec:
       injectionPath: /inject
       injectionURL: ""
     meshConfig:
-      enablePrometheusMerge: true
+      enablePrometheusMerge: false
     ownerName: ""
     pilot:
       affinity: { }
