--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -61,8 +61,7 @@ spec:
         probeSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
         additionalScrapeConfigs:
-          - job_name: 'istio-mesh'
-            scrape_interval: 5s
+          - job_name: 'istiod'
             kubernetes_sd_configs:
               - role: endpoints
                 namespaces:
@@ -71,59 +70,12 @@ spec:
             relabel_configs:
               - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
                 action: keep
-                regex: istio-telemetry;prometheus
-          - job_name: 'envy'
-            scrape_interval: 5s
+                regex: istiod;http-monitoring
+          - job_name: 'envoy-stats'
+            metrics_path: /stats/prometheus
             kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
+              - role: pod
             relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
+              - source_labels: [__meta_kubernetes_pod_container_port_name]
                 action: keep
-                regex: istio-statsd-prom-bridge;statsd-prom
-          - job_name: 'istio-policy'
-            scrape_interval: 5s
-            kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-                action: keep
-                regex: istio-policy;http-monitoring
-          - job_name: 'istio-telemetry'
-            scrape_interval: 5s
-            kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-                action: keep
-                regex: istio-telemetry;http-monitoring
-          - job_name: 'pilot'
-            scrape_interval: 5s
-            kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-                action: keep
-                regex: istio-pilot;http-monitoring
-          - job_name: 'galley'
-            scrape_interval: 5s
-            kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-                action: keep
-                regex: istio-galley;http-monitoring
+                regex: '.*-envoy-prom'
