--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -76,6 +76,37 @@ spec:
             kubernetes_sd_configs:
               - role: pod
             relabel_configs:
-              - source_labels: [__meta_kubernetes_pod_container_port_name]
+              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
                 action: keep
                 regex: '.*-envoy-prom'
+          - job_name: 'istio-ztunnel'
+            metrics_path: /stats/prometheus
+            kubernetes_sd_configs:
+              - role: pod
+                namespaces:
+                  names:
+                    - istio-system
+            relabel_configs:
+              - source_labels: [ __meta_kubernetes_pod_container_name ]
+                action: keep
+                regex: ztunnel  # Match the ztunnel container
+              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_scrape ]
+                action: keep
+                regex: true
+              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_path ]
+                action: replace
+                target_label: __metrics_path__
+                regex: (.+)
+              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_port ]
+                action: replace
+                target_label: __address__
+                regex: (.+)
+                replacement: $1
+              - action: labelmap
+                regex: __meta_kubernetes_pod_label_(.+)
+              - source_labels: [ __meta_kubernetes_namespace ]
+                action: replace
+                target_label: namespace
+              - source_labels: [ __meta_kubernetes_pod_name ]
+                action: replace
+                target_label: pod
