--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -81,6 +81,7 @@ spec:
                 regex: '.*-envoy-prom'
           - job_name: 'istio-ztunnel'
             scrape_interval: 15s
+            scrape_timeout: 10s
             metrics_path: /stats/prometheus
             kubernetes_sd_configs:
               - role: pod
@@ -88,11 +89,6 @@ spec:
                   names:
                     - istio-system
             relabel_configs:
-#              - source_labels: [__meta_kubernetes_pod_ip]
-#                action: replace
-#                target_label: __address__
-#                regex: (.+)
-#                replacement: $1:15020
               - source_labels: [ __meta_kubernetes_pod_container_name ]
                 action: keep
                 regex: istio-proxy  # Match the ztunnel container
