--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -83,6 +83,8 @@ spec:
             scrape_interval: 15s
             scrape_timeout: 10s
             metrics_path: /stats/prometheus
+            scrape_protocols:
+              - OpenMetricsText1.0.0
             kubernetes_sd_configs:
               - role: pod
                 namespaces:
@@ -99,11 +101,11 @@ spec:
                 action: replace
                 target_label: __metrics_path__
                 regex: (.+)
-              - source_labels: [ __meta_kubernetes_pod_annotation_prometheus_io_port ]
+              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
                 action: replace
                 target_label: __address__
-                regex: (.+)
-                replacement: $1
+                regex: (.+);(.+)
+                replacement: $1:$2
               - action: labelmap
                 regex: __meta_kubernetes_pod_label_(.+)
               - source_labels: [ __meta_kubernetes_namespace ]
