--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -101,11 +101,11 @@ spec:
                 action: replace
                 target_label: __metrics_path__
                 regex: (.+)
-              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
-                action: replace
-                target_label: __address__
-                regex: (.+);(.+)
-                replacement: $1:$2
+#              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
+#                action: replace
+#                target_label: __address__
+#                regex: (.+);(.+)
+#                replacement: $1:$2
               - action: labelmap
                 regex: __meta_kubernetes_pod_label_(.+)
               - source_labels: [ __meta_kubernetes_namespace ]
