Add istio waypoint for default namespace

--- a/kubernetes/apps/istio/kustomization.yaml
+++ b/kubernetes/apps/istio/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./istio-cni.yaml
   - ./istio-ztunnel.yaml
   - ./kiali
+  - ./waypoint.yaml
 configMapGenerator:
   - name: istio-grafana-dashboards
     namespace: monitoring
