--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -79,6 +79,10 @@ spec:
               - source_labels: [ __meta_kubernetes_pod_container_port_name ]
                 action: keep
                 regex: '.*-envoy-prom'
+              - source_labels: [__meta_kubernetes_namespace]
+                action: keep
+                regex: keep
+                target_label: namespace
           - job_name: 'istio-ztunnel'
             scrape_interval: 15s
             scrape_timeout: 10s
@@ -101,11 +105,11 @@ spec:
                 action: replace
                 target_label: __metrics_path__
                 regex: (.+)
-#              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
-#                action: replace
-#                target_label: __address__
-#                regex: (.+);(.+)
-#                replacement: $1:$2
+              #              - source_labels: [ __meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port ]
+              #                action: replace
+              #                target_label: __address__
+              #                regex: (.+);(.+)
+              #                replacement: $1:$2
               - action: labelmap
                 regex: __meta_kubernetes_pod_label_(.+)
               - source_labels: [ __meta_kubernetes_namespace ]
