--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
                 regex: '.*-envoy-prom'
               - source_labels: [__meta_kubernetes_namespace]
                 action: keep
-                regex: true
+                regex: *
                 target_label: namespace
           - job_name: 'istio-ztunnel'
             scrape_interval: 15s
