--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -75,6 +75,9 @@ spec:
             metrics_path: /stats/prometheus
             kubernetes_sd_configs:
               - role: pod
+                namespaces:
+                  names:
+                    - default
             relabel_configs:
               - source_labels: [ __meta_kubernetes_pod_container_port_name ]
                 action: keep
