--- a/kubernetes/apps/istio/waypoint.yaml
+++ b/kubernetes/apps/istio/waypoint.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   labels:
-    istio.io/waypoint-for: service
+    istio.io/waypoint-for: all
   name: waypoint
   namespace: default
 spec:
