Add grafana loki dashboard for istio

--- a/kubernetes/apps/istio/kustomization.yaml
+++ b/kubernetes/apps/istio/kustomization.yaml
@@ -25,3 +25,4 @@ configMapGenerator:
       - ./dashboards/service.json
       - ./dashboards/ztunnel.json
       - ./dashboards/workload.json
+      - ./dashboards/grafana-loki-dashboard.json
