Enable istio dns capturing

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -111,6 +111,9 @@ spec:
     meshConfig:
       enablePrometheusMerge: true
       ingressClass: istio-ingress
+      defaultConfig:
+        proxyMetadata:
+          ISTIO_META_DNS_CAPTURE: "true"
     ownerName: ""
     pilot:
       affinity: { }
