--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -36,6 +36,13 @@ spec:
     alertmanager:
       enabled: false
     grafana:
+      image:
+        # -- The Docker registry
+        registry: docker.io
+        # -- Docker image repository
+        repository: grafana/grafana
+        # Overrides the Grafana image tag whose default is the chart appVersion
+        tag: 11.2.0
       ingress:
         enabled: true
         ingressClassName: internal
