--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -22,8 +22,8 @@ spec:
     remediation:
       retries: 50
   values:
-    podAnnotations:
-      instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
+    #podAnnotations:
+      #instrumentation.opentelemetry.io/inject-nodejs: "default/nodejs-instrumentation"
     resources:
       limits:
         cpu: 1
