Switch to istio default profile

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -20,7 +20,7 @@ spec:
   releaseName: istiod
   targetNamespace: istio-system
   values:
-    profile: ambient
+    profile: default
     base:
       enableIstioConfigCRDs: true
     experimental:
