--- a/kubernetes/apps/default/namespace.yaml
+++ b/kubernetes/apps/default/namespace.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: default
-  annotations:
-    linkerd.io/inject: disabled
   labels:
-    istio.io/dataplane-mode: ambient
-    istio.io/use-waypoint: waypoint
+#    istio.io/dataplane-mode: ambient
+#    istio.io/use-waypoint: waypoint
+    istio-injection: enabled
