--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -25,7 +25,10 @@ spec:
     fullnameOverride: ingress-nginx-internal
     controller:
       podAnnotations:
-        linkerd.io/inject: enabled
+        linkerd.io/inject: disabled
+        traffic.sidecar.istio.io/includeInboundPorts: ""
+      labels:
+        sidecar.istio.io/inject: "true"
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.1.202"
