Update default namespace ingresses to use nginx ingress service upstream

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -39,6 +39,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/group: Media
           hajimari.io/icon: mdi:movie
+          nginx.ingress.kubernetes.io/service-upstream: "true"
         hosts:
           - host: &host radarr.internal.${SECRET_DOMAIN}
             paths:
