--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -37,6 +37,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/group: Media
           hajimari.io/icon: mdi:television-classic
+          nginx.ingress.kubernetes.io/service-upstream: "true"
         hosts:
           - host: &host sonarr.internal.${SECRET_DOMAIN}
             paths:
