--- a/kubernetes/apps/default/network-policy.yaml
+++ b/kubernetes/apps/default/network-policy.yaml
@@ -78,6 +78,8 @@ spec:
               protocol: TCP
             - port: "5055"
               protocol: TCP
+            - port: "15090"
+              protocol: TCP
           rules:
             http:
               - {}
